fix overflow

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -14,6 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $blackColor;
+  overflow: hidden;
 }
 
 button {
